# flif.rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SpecNotes.md
benches/: decode.rs
examples/: decode.rs  flif.description  flif.flif  flif_large.flif  tiny.flif
flif/: Cargo.toml
flif-cli/: Cargo.toml
flif-cli/src/: main.rs
flif-sys/: Cargo.toml
flif-sys/benches/: decode.rs
flif-sys/src/: lib.rs
flif-sys/tests/: png_equality.rs
flif/benches/: decode.rs  libflif.rs
flif/examples/: decode.rs
flif/src/: colors.rs  decoder.rs  decoding_image.rs  error.rs  lib.rs  pixels.rs
flif/src/components/: header.rs  metadata.rs  mod.rs
flif/src/components/transformations/: bounds.rs  channel_compact.rs  mod.rs  permute_planes.rs  ycocg.rs
flif/src/maniac/: mod.rs  pvec.rs
flif/src/numbers/: chances.rs  mod.rs  near_zero.rs  rac.rs  symbol.rs  varint.rs
flif/tests/: alpha_zero.rs  channel_compact.rs  fuzz.rs  invalid_inputs.rs  limits.rs  png_equality.rs
fuzz/: .gitignore  Cargo.toml
fuzz/artifacts/fuzz_flif/: crash-8d04f4ab0c66838d13561517a34fc18cdf062439
fuzz/fuzz_targets/: fuzz_flif.rs
resources/: invalid_tid.flif  invalid_tree.flif  rgba_edge.flif  road.flif  road2.flif  rust_logo.flif  rust_logo_discard_invisible.flif  sea_snail.flif  sea_snail_cutout.flif
src/: colors.rs  decoder.rs  description.rs  error.rs  lib.rs
src/components/: header.rs  metadata.rs
src/flif/: colors.rs  decoder.rs  error.rs  lib.rs
src/flif/components/: header.rs  metadata.rs  mod.rs  transformation.rs
src/flif/components/transformations/: bounds.rs  channel_compact.rs  mod.rs  palette.rs  permute_planes.rs  ycocg.rs
src/flif/maniac/: mod.rs
src/flif/numbers/: chances.rs  mod.rs  near_zero.rs  rac.rs  symbol.rs  varint.rs
src/maniac/: mod.rs
src/numbers/: chances.rs  mod.rs  rac.rs  symbol.rs
tests/: invalid_inputs.rs  png_equality.rs
