[package]
name = "flif-cli"
version = "0.1.0"
authors = ["Daniel Griffen <daniel@griffen.io>"]
license = "MIT OR Apache-2.0"
description = "FLIF decoder CLI tool"
repository = "https://github.com/dgriffen/flif.rs"

[dependencies]
structopt = "0.2"
png = "0.13"
flif = { version = "0.4", path = "../flif/" }
